Fix header content spacing

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -249,7 +249,10 @@ img {
 .content {
   font-family: 'Ibm Plex Sans', sans-serif;
   background-color: white;
-  padding: 60px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 30px;
+  padding-bottom: 60px;
   line-height: 20pt;
 }
 
@@ -341,7 +344,7 @@ pre {
 }
 
 .page-header {
-  padding-top: 50px;
+  padding-top: 80px;
   padding-bottom: 9px;
   text-align: center;
 }
